# file-encryption-tool-rust

./: Cargo.toml  README.md
src/: gui.rs  main.rs
src/crypto/: aes.rs  chacha20.rs  mod.rs
testings/: encrypted_file.txt
