[package]
name = "Encora"
version = "0.1.0"
edition = "2021"

[dependencies]
chacha20 = "0.9.1"
iced = { version = "0.12.1"}
rfd = "0.15.0"
rand ="0.8.5"
sha2 = "0.10"
hex = "0.4.3"
copypasta = "0.10.1"
aes = "0.7"
block-modes = "0.8"
block-padding = "0.3"
cipher = "0.3"
aes-gcm = "0.10.1"
thiserror = "1.0"
